--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "eslint": "^3.11.1",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.4",
