--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "easing-utils": "0.0.6",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
