--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "node": true
   },
   "rules": {
-    "no-use-before-define": 1,
+    "no-use-before-define": 0,
     "no-dupe-class-members": 1,
     "no-multiple-empty-lines": 0,
     "no-else-return": 0,
@@ -41,11 +41,15 @@
     "id-length": 0,
     "no-caller": 0,
     "eol-last": 0,
-    "no-undef": 0,
+    "no-undef": 1,
     "space-in-parens": 0,
     "arrow-parens": 0,
     "no-param-reassign": 0,
-    "computed-property-spacing" 0
+    "computed-property-spacing": 0,
+    "global-require": 0,
+    "keyword-spacing": 0,
+    "template-curly-spacing": 0,
+    "max-len": 0
   },
   "plugins": [
     "import"
